# T3PP_Patch_GUI_Lite

./: .gitignore  CMakeLists.txt  README.md  T3PP_Patch_GUI_Lite.sln
.github/workflows/: ci.yml  release.yml
PatchGUI/: AGENTS.md  MainWindow.xaml  MainWindow.xaml.cs  PatchGUIlite.csproj
PatchGUI/core/: Models.cs  NativeMethods.cs  PatchMetadataReader.cs  T3ppDiff.cs
PatchGUI/lang/: en_US.json  zh_CN.json
PatchGUIlite/: App.xaml  App.xaml.cs  LICENSE  LocalizationManager.cs  MainWindow.xaml  MainWindow.xaml.cs  PatchGUIlite.csproj  Xdelta3Wrapper.cs
PatchGUIlite/Properties/PublishProfiles/: FolderProfile.pubxml
PatchGUIlite/core/: HashUtility.cs  NativeMethods.cs  RuntimeChecker.cs  T3ppDiff.cs  UpdateService.cs
PatchGUIlite/lang/: en_US.json  zh_CN.json
